# freewan-back-graph

./: pyproject.toml
api/: api_generator.py  lebedoo.sql
api/api/: settings.py  urls.py
api/config/gunicorn/: dev.py
api/lebedoo/: apps.py  models.py  schema.py  types.py
api/lebedoo/address/: mutations.py  queries.py  tests.py  types.py
api/lebedoo/beverage_rack/: mutations.py  queries.py  tests.py  types.py
api/lebedoo/beverage_rack_buyer/: mutations.py  queries.py  tests.py  types.py
api/lebedoo/beverage_rack_owner/: mutations.py  queries.py  tests.py  types.py
api/lebedoo/beverage_rack_payments/: mutations.py  queries.py  tests.py  types.py
api/lebedoo/cities/: mutations.py  queries.py  tests.py  types.py
api/lebedoo/company/: mutations.py  queries.py  tests.py  types.py
api/lebedoo/contacts/: mutations.py  queries.py  tests.py  types.py
api/lebedoo/continent/: mutations.py  queries.py  tests.py  types.py
api/lebedoo/country/: mutations.py  queries.py  tests.py  types.py
api/lebedoo/currencies/: mutations.py  queries.py  tests.py  types.py
api/lebedoo/department/: mutations.py  queries.py  tests.py  types.py
api/lebedoo/gateways/: mutations.py  queries.py  tests.py  types.py
api/lebedoo/job_function/: mutations.py  queries.py  tests.py  types.py
api/lebedoo/job_profession/: mutations.py  queries.py  tests.py  types.py
api/lebedoo/languages/: mutations.py  queries.py  tests.py  types.py
api/lebedoo/months/: mutations.py  queries.py  tests.py  types.py
api/lebedoo/municipalities/: mutations.py  queries.py  tests.py  types.py
(+92 files in other folders)
